fix(@clayui/css): Wrap *-theme-colors map keys in single quotes. Key names that match CSS colors makes Sass throw this warning without quotes:
> WARNING: You probably don't mean to use the color value white in interpolation here.
It may end up represented as white, which will likely produce invalid CSS.
Always quote color names when using them as strings or map keys (for example, "white").
If you really want to use the color value here, use '"" + $color'.

fixes #4219

--- a/packages/clay-css/src/scss/variables/_globals.scss
+++ b/packages/clay-css/src/scss/variables/_globals.scss
@@ -124,14 +124,14 @@ $dark-l2: lighten($dark, 32.94) !default;
 $theme-colors: () !default;
 $theme-colors: map-merge(
 	(
-		primary: $primary,
-		secondary: $secondary,
-		success: $success,
-		info: $info,
-		warning: $warning,
-		danger: $danger,
-		light: $light,
-		dark: $dark,
+		'primary': $primary,
+		'secondary': $secondary,
+		'success': $success,
+		'info': $info,
+		'warning': $warning,
+		'danger': $danger,
+		'light': $light,
+		'dark': $dark,
 	),
 	$theme-colors
 );
